--- a/source/partials/blocks/historia.htm
+++ b/source/partials/blocks/historia.htm
@@ -17,7 +17,7 @@
           data-aos-delay="200"
           style="line-height: 0"
         >
-          <img src="images/about/home-8.jpg" alt="" class="" />
+          <img src="images/historia.jpg" alt="" class="" />
         </div>
       </div>
 
