--- a/source/partials/blocks/navigation.htm
+++ b/source/partials/blocks/navigation.htm
@@ -1,35 +1,57 @@
-<header>
-  <nav
-    class="navbar is-dark is-fixed-top"
-    role="navigation"
-    aria-label="main navigation"
-  >
-    <div class="navbar-brand">
-      <a class="navbar-item" href="index.html">
-        <img src="images/logo.png" width="112" height="28" />
-      </a>
+<!-- navigation -->
+<header class="navigation">
+  <nav id="navbar" class="navbar main-nav">
+    <div class="container">
+      <div class="navbar-brand ml-0">
+        <a class="navbar-item" href="index.html">
+          <!-- <img src="images/logo/logo.png" alt="logo"> -->
+          <h2 class="has-text-white" style="font-size: 2rem">Silvia & Ivan</h2>
+        </a>
+        <button
+          role="button"
+          class="navbar-burger burger"
+          data-hidden="true"
+          data-target="navigation"
+        >
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+          <span aria-hidden="true"></span>
+        </button>
+      </div>
 
-      <a
-        role="button"
-        class="navbar-burger burger"
-        aria-label="menu"
-        aria-expanded="false"
-        data-target="navigation"
-      >
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-      </a>
-    </div>
+      <div class="navbar-menu mr-0" id="navigation">
+        <ul class="navbar-end">
+          <li class="navbar-item">
+            <a class="navbar-link is-arrowless" href="index.html">Inicio</a>
+          </li>
 
-    <div id="navigation" class="navbar-menu">
-      <div class="navbar-end">
-        <a href="index.html" class="navbar-item">Inicio</a>
-        <a href="about.html" class="navbar-item">Historia</a>
-        <a href="blog.html" class="navbar-item">Itinerario</a>
-        <a href="blog.html" class="navbar-item">Presentes</a>
-        <a href="portfolio.html" class="navbar-item">Preguntas?</a>
+          <li class="navbar-item">
+            <a class="navbar-link is-arrowless" href="">Historia</a>
+          </li>
+
+          <li class="navbar-item">
+            <a class="navbar-link is-arrowless" href="">Itinerario</a>
+          </li>
+
+          <li class="navbar-item">
+            <a class="navbar-link is-arrowless" href="">Playa Lagarto</a>
+          </li>
+
+          <!-- <li class="navbar-item">
+            <a class="navbar-link is-arrowless" href="">Presentes</a>
+          </li> -->
+
+          <li class="navbar-item">
+            <a
+              class="navbar-link is-arrowless quote-btn bg-primary rounded-btn letter-spacing is-uppercase"
+              href="faq.html"
+            >
+              Preguntas <i class="ti-angle-right"></i>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
 </header>
+<!-- nav part end -->
