--- a/source/partials/header.htm
+++ b/source/partials/header.htm
@@ -7,7 +7,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="wedding" />
+    <meta
+      name="description"
+      content="My personal wedding website. Silvia & Ivan."
+    />
 
     <meta name="author" content="kaotik.cr" />
 
