agregue los partials de itinerario + historia + detalles de playa lagarto

--- a/source/partials/blocks/historia.htm
+++ b/source/partials/blocks/historia.htm
@@ -1,4 +1,4 @@
-<section class="section intro">
+<section class="section intro" id="historia">
   <div class="container">
     <div class="columns is-justify-content-center">
       <div
@@ -29,12 +29,12 @@
             data-aos-delay="200"
           >
             <div class="intro-item mb-4 mb-lg-0">
-              <i class="ti-eye text-color"></i>
+              <i class="fa-solid fa-eye text-color"></i>
               <h4 class="mt-4 mb-3">¿Cómo se conocieron por primera vez?</h4>
               <p>
                 A pesar que ambos somos de Palmares y teníamos muchos amigos en
                 común, nunca tuvimos ninguna relación hasta el día que nos
-                conocimos. Fue en un paseo a Jaco para el mundial de surf del
+                conocimos. Fue en un paseo a Jacó para el mundial de surf del
                 2016 cuando coincidimos en el viaje, compartimos breves
                 conversaciones que fueron suficientes para despertar la chispa
                 en ambos.
@@ -47,10 +47,10 @@
               data-aos="fade-up"
               data-aos-delay="300"
             >
-              <i class="ti-magnet text-color"></i>
+            <i class="fa-solid fa-magnet text-color"></i>
               <h4 class="mt-4 mb-3">¿Quién hizo la primer movida?</h4>
               <p>
-                Despues del viaje a Jaco empezamos a conversar mas seguido sobre
+                Despues del viaje a Jaco empezamos a conversar más seguido sobre
                 cualquier cosa, fue cuando Ivan invitó a Silvia a cenar con un
                 matiz mas romántico donde la quimica se podía sentir. Al
                 finalizar la cena, cuando veníamos de regreso al carro Ivan
@@ -67,10 +67,10 @@
             data-aos-delay="200"
           >
             <div class="intro-item mb-4 mb-lg-0">
-              <i class="ti-heart text-color"></i>
+              <i class="fa-solid fa-heart text-color"></i>
               <h4 class="mt-4 mb-3">¿Desde cuando son pareja?</h4>
               <p>
-                Somos novios desde hace mas de 6 años, nos hicimos novios en el
+                Nuestra relación tiene más de 6 años, nos hicimos novios en el
                 Templo Blanco en Chiang Mai, Thailandia un 17 de octubre de
                 2016.
               </p>
@@ -81,9 +81,9 @@
               class="intro-item mb-4 mb-lg-0"
               data-aos="fade-up"
               data-aos-delay="300"
-            >
-              <i class="ti-palette text-color"></i>
-              <h4 class="mt-4 mb-3">¿Cual fue su cita mas memorable?</h4>
+            >              
+              <i class="fa-solid fa-palette text-color"></i>
+              <h4 class="mt-4 mb-3">¿Cual fue su cita más memorable?</h4>
               <p>
                 Sin duda la primera, ese primer beso fue cautivador y la energía
                 que salió de ambos durante la velada fue pura magia.
@@ -97,8 +97,8 @@
             data-aos="fade-up"
             data-aos-delay="200"
           >
-            <div class="intro-item mb-4 mb-lg-0">
-              <i class="ti-shine text-color"></i>
+            <div class="intro-item mb-4 mb-lg-0">              
+              <i class="fa-solid fa-umbrella-beach text-color"></i>
               <h4 class="mt-4 mb-3">
                 ¿Cúal es una actividad que les gusta hacer juntos?
               </h4>
@@ -116,7 +116,7 @@
               data-aos="fade-up"
               data-aos-delay="300"
             >
-              <i class="ti-pin text-color"></i>
+            <i class="fa-solid fa-map-pin text-color"></i>
               <h4 class="mt-4 mb-3">¿Qué van a hacer de luna de miel?</h4>
               <p>
                 Aún no tenemos el plan listo, pero esperamos irnos a la playa a
