--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -7,3 +7,8 @@ $black-light: #2b2e3a;
 $border-color:#dedede;
 $primary-font:'Montserrat', sans-serif;
 $secondary-font:'Source Sans Pro', sans-serif;
+
+
+$timeline-icon-size: $size-7;
+
+$fa-font-path: "../plugins/webfonts";
