--- a/source/partials/blocks/cover.htm
+++ b/source/partials/blocks/cover.htm
@@ -1,5 +1,19 @@
-<section class="hero is-link is-fullheight slider">
+<section class="hero is-link is-fullheight slider" id="cover">
   <div class="hero-body">
+    <div class="container has-text-centered">
+        <span class="is-block mb-4 is-uppercase">
+          Sabado 4 de Febrero 2023
+        </h2>
+        <h1 class="animated fadeInUp mb-6 has-text-white">
+          Playa Lagarto, Guanacaste
+        </h1>
+        <span class="is-block mb-4 is-uppercase" id="timer">
+          97 dias 4 horas
+        </h2>        
+    </div>
+</div>
+
+  <!-- <div class="hero-body">
     <div class="has-text-centered">
       <span class="is-block mb-4 is-uppercase">Sabado 4 de Febrero 2023</span>
       <h1 class="animated fadeInUp mb-6 has-text-white">
@@ -7,5 +21,5 @@
       </h1>
       <span class="is-block mb-4 is-uppercase">97 dias 4 horas</span>
     </div>
-  </div>
+  </div> -->
 </section>
