--- a/source/partials/blocks/footer.htm
+++ b/source/partials/blocks/footer.htm
@@ -5,60 +5,46 @@
 			<div class="column is-4-desktop is-5-tablet">
 				<div class="widget mb-0">
 					<div class="logo mb-4">
-						<h2 class="has-text-white" style="font-size:2rem">Enov.</h2>
-					</div>
-					<a href="mailto:support@themefisher.com" class="has-text-white">support@themefisher.com</a>
-					<p class="mt-4 mb-3">290 Maryam Springs 260, Courbevoie, <br> Paris, France</p>
-					<a href="tel:+23-456-6588"><span class="has-text-white h4">+23-456-6588</span></a>
+						<h2 class="has-text-white" style="font-size:2rem">Contactos</h2>
+					</div>					
 				</div>
 			</div>
 
 			<div class="column is-2-desktop is-5-tablet">
-				<div class="widget has-text-white mb-0">
-					<h4 class="text-capitalize mb-4 has-text-white">Company</h4>
+				<div class="widget mb-0">
+					<h4 class="text-capitalize mb-4 has-text-white">Ivan</h4>
 
 					<ul class="list-unstyled footer-menu lh-35">
-						<li><a href="#">Terms & Conditions</a></li>
-						<li><a href="#">Privacy Policy</a></li>
-						<li><a href="#">Support</a></li>
-						<li><a href="#">FAQ</a></li>
+						<li><a target="_blank"href="https://wa.me/50688767834"><i class="fa-brands fa-whatsapp"></i> 8876-7834</a></li>
 					</ul>
 				</div>
 			</div>
 			<div class="column is-2-desktop is-5-tablet">
 				<div class="widget mb-0">
-					<h4 class="text-capitalize mb-4 has-text-white">Quick Links</h4>
+					<h4 class="text-capitalize mb-4 has-text-white">Silvia</h4>
 
 					<ul class="list-unstyled footer-menu lh-35">
-						<li><a href="#">About</a></li>
-						<li><a href="#">Services</a></li>
-						<li><a href="#">Team</a></li>
-						<li><a href="#">Contact</a></li>
+						<li><a target="_blank"href="https://wa.me/50688135419"><i class="fa-brands fa-whatsapp"></i> 8813-5419</a></li>						
 					</ul>
 				</div>
 			</div>
-			<div class="column is-2-desktop is-5-tablet">
+			<!-- <div class="column is-2-desktop is-5-tablet">
 				<div class="widget mb-0">
-					<h4 class="text-capitalize mb-4 has-text-white">Follow us</h4>
-					<ul class="list-unstyled footer-socials">
-						<li><a href="https://www.facebook.com/themefisher"><i class="ti-facebook mr-2 text-muted"></i>facebook</a></li>
-						<li><a href="https://twitter.com/themefisher"><i class="ti-twitter mr-2 text-muted"></i>Twitter</a></li>
-						<li><a href="https://github.com/themefisher/"><i class="ti-github mr-2 text-muted"></i>Github</a></li>
-						<li><a href="https://dribbble.com/themefisher/"><i class="ti-dribbble mr-2 text-muted"></i>Dribble</a></li>
-					</ul>
-					
+					<h4 class="text-capitalize mb-4 has-text-white">Josefina - Planner</h4>
+					<ul class="list-unstyled footer-menu">
+						<li><i class="fa-brands fa-whatsapp"></i> 8888-5555</a></li>						
+					</ul>					
 				</div>
-			</div>
-		</div>
-		
-		<div class="footer-btm pt-4 pb-3">
+			</div> -->
+		</div>		
+	</div>
+	<div class="footer-btm pt-4 pb-3">
 			<div class="columns is-justify-content-center">
 				<div class="column has-text-centered">
 					<div class="copyright">
-						<p>&copy; Copyright 2020 Design &amp; Developed by <a href="https://themefisher.com/" target="_blank" class=" has-text-white">Themefisher</a></p>
+						<p>Hecho con <i class="fa-solid fa-heart has-text-danger"></i> por <a href="https://kaotik.cr/" target="_blank" class=" has-text-white">KaotiK</a></p>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 </footer>
