--- a/source/partials/blocks/itinerario.htm
+++ b/source/partials/blocks/itinerario.htm
@@ -1,26 +1,30 @@
 <section class="section service bg-gray">
   <div class="container">
-    <div class="columns is-justify-content-center">
+    <div class="columns is-justify-content-center" id="itinerario">
       <div
-        class="column is-6-widescreen is-8-desktop is-10-tablet has-text-centered"
+        class="column is-6-widescreen is-8-desktop is-10-tablet"
       >
-        <div class="section-title">
+        <div class="section-title has-text-centered">
           <h2 class="mb-4">Itinerario</h2>
         </div>
         <div class="timeline">
           <div class="timeline-item">
+            <div class="timeline-marker"></div>
             <div class="timeline-content">
               <p class="heading">Viernes 3 de Febrero - Al atardecer</p>
               <h5>Traguitos de Bienvenida</h5>
               <p>
-                Nos reunimos en Playa Junquillal, en la casa donde
-                se hospeda Ivan para recibir a quienes quieran cenar juntos frente al mar.
+                Nos reunimos en Playa Junquillal, en casa Junco, la casa donde
+                se hospeda Ivan para recibirlos luego del viaje a quienes quieran cenar juntos frente al mar.
                 Tendremos chicharrones, parrillada y ensaladas.</p>
                 <!-- <p class="has-text-weight-bold">Traer sus
                 propias bebidas.</p> -->
             </div>
           </div>
           <div class="timeline-item">
+            <div class="timeline-marker is-icon">              
+              <i class="fa-solid fa-cross"></i>
+            </div>
             <div class="timeline-content">
               <p class="heading">Sábado 4 de Febrero - 2:00pm</p>
               <h5>Ceremonia de Matrimonio</h5>
@@ -30,17 +34,19 @@
             </div>
           </div>
           <div class="timeline-item">
+            <div class="timeline-marker"></div>
             <div class="timeline-content">
               <p class="heading">Sábado 4 de Febrero - Al Atardecer</p>
               <h5>Recepción y Fiesta</h5>
               <p>Nos estamos casando! Nos gustaría compartir unas palabras, comer y celebrar con todos.</p>
                 <p>Traer solo la mejor percha y las mejores vibras.</p>
+                <!-- <p class="has-text-weight-bold">Código de Vestimenta: Formal de Playa</p> -->
               </p>
             </div>
           </div>
           <div class="timeline-item">
-            <div class="timeline-marker is-icon">
-              <i class="fa-solid fa-moon-stars"></i>
+            <div class="timeline-marker is-icon text-color">
+              <i class="fa-solid fa-sun"></i>
             </div>
             <div class="timeline-content">
               <p class="heading">Sabado 4 de Febrero - 5:45pm</p>
@@ -48,18 +54,16 @@
             </div>
           </div>
           <div class="timeline-item">
-            <div class="timeline-marker is-icon">
-              <i class="fa-solid fa-moon-stars"></i>
+            <div class="timeline-marker is-icon text-color">
+              <i class="fa-solid fa-moon"></i>
             </div>
-            <div class="timeline-content">
+            <div class="timeline-content">              
               <p class="heading">Domingo 5 de Febrero - 5:55am</p>
               <h5>Puesta de la Luna</h5>
             </div>
           </div>
           <div class="timeline-item">
-            <div class="timeline-marker is-icon">
-              <i class="fa-solid fa-moon-stars"></i>
-            </div>
+            <div class="timeline-marker"></div>
             <div class="timeline-content">
               <p class="heading">Domingo 5 de Febrero - 6:25am</p>
               <h5>Desayuno post-boda</h5>
