--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,3 +1,6 @@
+@import '../../node_modules/bulma/bulma.sass';
+@import '../../node_modules/bulma-timeline/dist/css/bulma-timeline.sass';
+
 @import 'variables.scss';
 @import 'mixins.scss';
 @import 'media-query.scss';
@@ -7,20 +10,25 @@
 @import 'templates/navigation.scss';
 @import 'templates/backgrounds.scss';
 @import 'templates/cover.scss';
-@import 'templates/intro.scss';
-@import 'templates/about.scss';
-@import 'templates/counter.scss';
-@import 'templates/team.scss';
-@import 'templates/service.scss';
-@import 'templates/cta.scss';
-@import 'templates/review.scss';
-@import 'templates/pricing.scss';
-@import 'templates/portfolio.scss';
-@import 'templates/contact.scss';
-@import 'templates/blog.scss';
-@import 'templates/single-post.scss';
-@import 'templates/blog-sidebar.scss';
+// @import 'templates/intro.scss';
+// @import 'templates/about.scss';
+// @import 'templates/counter.scss';
+// @import 'templates/team.scss';
+// @import 'templates/service.scss';
+// @import 'templates/cta.scss';
+// @import 'templates/review.scss';
+// @import 'templates/pricing.scss';
+// @import 'templates/portfolio.scss';
+// @import 'templates/contact.scss';
+// @import 'templates/blog.scss';
+// @import 'templates/single-post.scss';
+// @import 'templates/blog-sidebar.scss';
 
 @import 'templates/footer.scss';
 
-// @import 'extensions/bulma-timeline.sass';
+
+@import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
+@import "../../node_modules/@fortawesome/fontawesome-free/scss/solid.scss";
+@import "../../node_modules/@fortawesome/fontawesome-free/scss/regular.scss";
+@import "../../node_modules/@fortawesome/fontawesome-free/scss/brands.scss";
+@import "../../node_modules/@fortawesome/fontawesome-free/scss/v4-shims.scss";
