Save the Date Ready

--- a/source/partials/blocks/cover.htm
+++ b/source/partials/blocks/cover.htm
@@ -1,25 +1,16 @@
-<section class="hero is-link is-fullheight slider" id="cover">
+<section class="hero is-fullheight slider" id="cover">
   <div class="hero-body">
     <div class="container has-text-centered">
         <span class="is-block mb-4 is-uppercase">
           Sabado 4 de Febrero 2023
         </h2>
-        <h1 class="animated fadeInUp mb-6 has-text-white">
+        <h1 class="mb-6 has-text-white">
           Playa Lagarto, Guanacaste
-        </h1>
-        <span class="is-block mb-4 is-uppercase" id="timer">
-          97 dias 4 horas
-        </h2>        
-    </div>
-</div>
+        </h1>        
+        <!-- Section contador Start -->
+        @@include('blocks/contador.htm')
+        <!-- Section contador End -->
 
-  <!-- <div class="hero-body">
-    <div class="has-text-centered">
-      <span class="is-block mb-4 is-uppercase">Sabado 4 de Febrero 2023</span>
-      <h1 class="animated fadeInUp mb-6 has-text-white">
-        Playa Lagarto, Guanacaste
-      </h1>
-      <span class="is-block mb-4 is-uppercase">97 dias 4 horas</span>
     </div>
-  </div> -->
+  </div>
 </section>
