--- a/source/partials/blocks/historia.htm
+++ b/source/partials/blocks/historia.htm
@@ -17,7 +17,7 @@
           data-aos-delay="200"
           style="line-height: 0"
         >
-          <img src="images/historia.jpg" alt="" class="" />
+          <img src="images/historia-1.jpg" alt="" class="" />
         </div>
       </div>
 
@@ -59,7 +59,22 @@
               </p>
             </div>
           </div>
+        </div>        
+      </div>
+    </div>
+    <div class="columns is-desktop is-justify-content-space-between">
+      <div class="column is-6-desktop">
+        <div
+          class="about-img"
+          data-aos="fade-right"
+          data-aos-delay="200"
+          style="line-height: 0"
+        >
+          <img src="images/historia-2.jpg" alt="" class="" />
         </div>
+      </div>
+
+      <div class="column is-6-desktop">
         <div class="columns">
           <div
             class="column is-6-desktop is-6-tablet"
@@ -90,7 +105,22 @@
               </p>
             </div>
           </div>
+        </div>        
+      </div>
+    </div>
+    <div class="columns is-desktop is-justify-content-space-between">
+      <div class="column is-6-desktop">
+        <div
+          class="about-img"
+          data-aos="fade-right"
+          data-aos-delay="200"
+          style="line-height: 0"
+        >
+          <img src="images/historia-3.jpg" alt="" class="" />
         </div>
+      </div>
+
+      <div class="column is-6-desktop">        
         <div class="columns">
           <div
             class="column is-6-desktop is-6-tablet"
@@ -104,8 +134,7 @@
               </h4>
               <p>
                 Nos encanta la playa, siempre listos. Desde relajarnos debajo
-                del sol, hacer snorkel en cualquier piedra o ir de tour en algun
-                bote. Un pareo, una hielera y un buen punto en la playa es todo
+                del sol, hacer snorkel en cualquier piedra o ir de tour donde sea. Un pareo, una hielera y un buen punto en la playa es todo
                 lo que necesitamos para pasarla bien.
               </p>
             </div>
