--- a/source/partials/blocks/itinerario.htm
+++ b/source/partials/blocks/itinerario.htm
@@ -13,12 +13,9 @@
             <div class="timeline-content">
               <p class="heading">Viernes 3 de Febrero - Al atardecer</p>
               <h5>Traguitos de Bienvenida</h5>
-              <p>
-                Nos reunimos en Playa Junquillal, en casa Junco, la casa donde
-                se hospeda Ivan para recibirlos luego del viaje a quienes quieran cenar juntos frente al mar.
-                Tendremos chicharrones, parrillada y ensaladas.</p>
-                <!-- <p class="has-text-weight-bold">Traer sus
-                propias bebidas.</p> -->
+              <p>Nos reunimos en Playa Junquillal, para recibirlos luego del viaje a quienes quieran cenar juntos frente al mar.</p>
+              <p>Tendremos chicharrones, parrillada y ensaladas.</p>                
+              <a target="_blank" href="https://ul.waze.com/ul?ll=10.14553303%2C-85.8016250564&navigate=yes&zoom=17" class="has-text-weight-bold"><i class="fa-brands fa-waze"></i> Casa Junco</a>
             </div>
           </div>
           <div class="timeline-item">
@@ -28,9 +25,8 @@
             <div class="timeline-content">
               <p class="heading">Sábado 4 de Febrero - 2:00pm</p>
               <h5>Ceremonia de Matrimonio</h5>
-              <p>
-                La iglesia es humilde y pequeña, esperamos contar únicamente con Familiares durante la ceremonia. Agrademos la comprensión.</p>
-                <p class="has-text-weight-bold">Iglesia de Rio Seco</p>
+              <p>La iglesia es sencilla y muy pequeña, esperamos contar únicamente con familia durante la ceremonia.</p>              
+              <a target="_blank" href="https://ul.waze.com/ul?ll=10.21134287%2C-85.75827956&navigate=yes&zoom=17" class="has-text-weight-bold"><i class="fa-brands fa-waze"></i> Iglesia Río Seco</a>
             </div>
           </div>
           <div class="timeline-item">
@@ -38,9 +34,8 @@
             <div class="timeline-content">
               <p class="heading">Sábado 4 de Febrero - Al Atardecer</p>
               <h5>Recepción y Fiesta</h5>
-              <p>Nos estamos casando! Nos gustaría compartir unas palabras, comer y celebrar con todos.</p>
-                <p>Traer solo la mejor percha y las mejores vibras.</p>
-                <!-- <p class="has-text-weight-bold">Código de Vestimenta: Formal de Playa</p> -->
+              <p>Nos estamos casando! Nos gustaría compartir unas palabras, comer y celebrar bailando en la arena hasta el amanecer.</p>
+              <a target="_blank" href="https://www.waze.com/ul?ll=10.12747309%2C-85.79697847&navigate=yes&zoom=33" class="has-text-weight-bold"><i class="fa-brands fa-waze"></i> Playa Lagarto</a>
               </p>
             </div>
           </div>
@@ -63,11 +58,20 @@
             </div>
           </div>
           <div class="timeline-item">
+            <div class="timeline-marker is-icon text-color">
+              <i class="fa-solid fa-sun"></i>
+            </div>
+            <div class="timeline-content">              
+              <p class="heading">Domingo 5 de Febrero - 6:05am</p>
+              <h5>Salida del sol</h5>
+            </div>
+          </div>
+          <div class="timeline-item">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
-              <p class="heading">Domingo 5 de Febrero - 6:25am</p>
+              <p class="heading">Domingo 5 de Febrero - 6:35am</p>
               <h5>Desayuno post-boda</h5>
-              <p>Para aquellos que se mantengan celebrando, vamos a despedirnos desayunando.</p>
+              <p>Nos despedimos desayunando.</p>
             </div>
           </div>
         </div>
