--- a/source/partials/blocks/navigation.htm
+++ b/source/partials/blocks/navigation.htm
@@ -22,33 +22,33 @@
       <div class="navbar-menu mr-0" id="navigation">
         <ul class="navbar-end">
           <li class="navbar-item">
-            <a class="navbar-link is-arrowless" href="#cover">Inicio</a>
+            <a class="navbar-link is-arrowless" href="index.html">Boda</a>
+          </li>
+
+          <!-- <li class="navbar-item">
+            <a class="navbar-link is-arrowless" href="index.html#historia">Historia</a>
           </li>
 
           <li class="navbar-item">
-            <a class="navbar-link is-arrowless" href="#historia">Historia</a>
+            <a class="navbar-link is-arrowless" href="index.html#itinerario">Itinerario</a>
           </li>
 
           <li class="navbar-item">
-            <a class="navbar-link is-arrowless" href="#itinerario">Itinerario</a>
-          </li>
-
-          <li class="navbar-item">
-            <a class="navbar-link is-arrowless" href="#playa-lagarto">Playa Lagarto</a>
-          </li>
+            <a class="navbar-link is-arrowless" href="index.html#playa-lagarto">Playa Lagarto</a>
+          </li> -->
 
           <!-- <li class="navbar-item">
             <a class="navbar-link is-arrowless" href="">Presentes</a>
           </li> -->
 
-          <!-- <li class="navbar-item">
+          <li class="navbar-item">
             <a
               class="navbar-link is-arrowless quote-btn bg-primary rounded-btn letter-spacing is-uppercase"
               href="faq.html"
             >
               Preguntas <i class="ti-angle-right"></i>
             </a>
-          </li> -->
+          </li>
         </ul>
       </div>
     </div>
