--- a/source/partials/blocks/playa-lagarto.htm
+++ b/source/partials/blocks/playa-lagarto.htm
@@ -30,7 +30,7 @@
             <div class="content">
               <h4>Villas Eco-Development</h4>
               <p>Este es nuestro hospedaje recomendado. Queda a 3 minutos de la fiesta. Son villas básicas con cocina y 1 o 2 cuartos más un sofa cama en la sala. Pueden acomodarse grupos de 2, 3, 4, 5, y hasta 6 personas.</p>
-              <p>Cumple con las 3 B, bueno, bonito y barato. Tiene piscina y A/C en los cuartos. Cuenta con un Restaurante/Soda. En caso que desen reservar en este lugar, Silvia & Ivan se dieron a la tarea de solicitar un descuento comunal para la boda, pueden dejarnos saber la necesidad de hospedaje y los incluimos en la reserva comunal. Tambien pueden reservar directamente por su cuenta. </p>
+              <p>Son cómodas y accesibles. Tiene piscina y A/C en los cuartos. Cuenta con un Restaurante/Soda. En caso que desen reservar en este lugar, Silvia & Ivan se dieron a la tarea de solicitar un descuento para invitados de la boda, pueden dejarnos saber la necesidad de hospedaje y los agregamos a la lista donde se paga tarifa preferencial. Tambien pueden reservar directamente por su cuenta. </p>
               <nav class="level is-mobile">
                 <div class="level-left">
                   <a class="level-item">
@@ -54,8 +54,8 @@
           <div class="media-content">
             <div class="content">
               <h4>Azul Ocean Club</h4>
-              <p>Queda a 10 minutos de la fiesta. Son villas de lujo con cocina y 1 o 2 cuartos más un sofa cama en la sala. Pueden acomodarse grupos de 2, 3, 4, 5, y hasta 6 personas.</p>
-              <p>Tiene piscina y A/C en los cuartos. Cuenta con varios restaurantes en el lugar.</p>
+              <p>Queda a 10 minutos de la fiesta. Son villas mucho mejor equipadas con cocina y 1 o 2 cuartos más un sofa cama en la sala. Pueden acomodarse grupos de 2, 3, 4, 5, y hasta 6 personas.</p>
+              <p>Tiene piscina y A/C en los cuartos. Frente al mar. Cuenta con varios restaurantes en el lugar.</p>
               <p><a target="_blank" href="https://www.azuloceanclub.com/"> Website Oficial</a></p>
               <nav class="level is-mobile">
                 <div class="level-left">
@@ -82,8 +82,8 @@
           </figure>
           <div class="media-content">
             <div class="content">
-              <h4>Quédese en una casa de lujo</h4>
-              <p>En la zona de entre Avellanas/Playa Negra y Junquillal/Marbella existen muchas y buenas opciones de casas de lujo con aún disponibilidad para la fecha de la boda.</p>             
+              <h4>Quédese en una casa de playa</h4>
+              <p>En la zona entre Avellanas/Playa Negra y Junquillal/Marbella existen muchas y buenas opciones de casas de lujo con aún disponibilidad para la fecha de la boda.</p>             
               <nav class="level is-mobile">
                 <div class="level-left">
                   <a class="level-item">
@@ -162,27 +162,9 @@
           </div>                    
         </article>
 
-        <div class="section has-text-centered">
-          <h3 class="mb-4 is-uppercase">Atajos</h3>
-          <nav class="level">
-            <div class="level-item has-text-centered">
-              <div>
-                <a target="_blank" href="https://www.waze.com/ul?ll=10.12747309%2C-85.79697847&navigate=yes&zoom=33" class="title"><i class="fa-brands fa-waze"></i> Fiesta</a>
-              </div>
-            </div>
-            <div class="level-item has-text-centered">
-              <div>
-                <a target="_blank" href="https://ul.waze.com/ul?ll=10.21134287%2C-85.75827956&navigate=yes&zoom=17" class="title"><i class="fa-brands fa-waze"></i> Iglesia Río Seco</a>
-              </div>
-            </div>
-            <div class="level-item has-text-centered">
-              <div>                
-                <a target="_blank" href="https://ul.waze.com/ul?ll=10.14553303%2C-85.8016250564&navigate=yes&zoom=17" class="title"><i class="fa-brands fa-waze"></i> Casa Junco</a>
-              </div>
-            </div>
-          </nav>
-        </div>
-        
+        <!-- Section atajos Start -->
+        @@include('blocks/atajos.htm')
+        <!-- Section atajos End -->        
 
       </div>
     </div>
