--- a/source/partials/footer.htm
+++ b/source/partials/footer.htm
@@ -13,45 +13,49 @@
    <!-- Counterup -->
    <script src="plugins/counterup/jquery.waypoints.min.js"></script>
    <script src="plugins/counterup/jquery.counterup.min.js"></script>
-   <script src="plugins/shuffle/shuffle.min.js"></script>
+   <!-- <script src="plugins/shuffle/shuffle.min.js"></script> -->
    <script src="plugins/aos/aos.js"></script>
    <script src="plugins/animate-css/wow.min.js"></script>
    <script src="plugins/modal-video/jquery-modal-video.min.js"></script>
 
    <!-- Google Map -->
-   <script src="plugins/google-map/map.js"></script>
-   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAkeLMlsiwzp6b3Gnaxd86lvakimwGA6UA&callback=initMap"></script>
+   <!-- <script src="plugins/google-map/map.js"></script>
+   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAkeLMlsiwzp6b3Gnaxd86lvakimwGA6UA&callback=initMap"></script> -->
 
    <script src="js/script.js"></script>
    <script>
-      // Set the date we're counting down to
+      
+// Set the date we're counting down to
 var countDownDate = new Date("Feb 4, 2023 14:00:00").getTime();
 
 // Update the count down every 1 second
 var x = setInterval(function() {
 
-  // Get today's date and time
-  var now = new Date().getTime();
+// Get today's date and time
+var now = new Date().getTime();
 
-  // Find the distance between now and the count down date
-  var distance = countDownDate - now;
+// Find the distance between now and the count down date
+var distance = countDownDate - now;
 
-  // Time calculations for days, hours, minutes and seconds
-  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+// Time calculations for days, hours, minutes and seconds
+var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-  // Display the result in the element with id="demo"
-  document.getElementById("timer").innerHTML = days + "días " + hours + "hrs "
-  + minutes + "mins ";
+// Display the result in the element with id="demo"
+document.getElementById("timer").innerHTML = days + " días " + hours + " hrs " + minutes + " mins " + seconds + " s ";
 
-  // If the count down is finished, write some text
-  if (distance < 0) {
-    clearInterval(x);
-    document.getElementById("timer").innerHTML = "CASADOS";
-  }
+// If the count down is finished, write some text
+if (distance < 0) {
+  clearInterval(x);
+  document.getElementById("timer").innerHTML = "CASADOS";
+}  
+      
 }, 1000);
+
+
+      
    </script>
 
 </body></html>
