--- a/source/partials/header.htm
+++ b/source/partials/header.htm
@@ -9,7 +9,7 @@
     />
     <meta
       name="description"
-      content="My personal wedding website. Silvia & Ivan."
+      content="Playa Lagarto, 4-FEB-23. Silvia & Ivan."
     />
 
     <meta name="author" content="kaotik.cr" />
@@ -17,7 +17,8 @@
     <!-- theme meta -->
 
     <title>Silvia & Ivan | Boda</title>
-    
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
+
     <!-- Icon Font Css -->
     <link rel="stylesheet" href="plugins/themify/css/themify-icons.css" />    
     <!-- AOS css -->
@@ -37,6 +38,17 @@
 
     <!-- Main Stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7V6WEHH041"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-7V6WEHH041');
+    </script>
+
   </head>
   <body></body>
 </html>
