--- a/source/scss/templates/_backgrounds.scss
+++ b/source/scss/templates/_backgrounds.scss
@@ -1,5 +1,5 @@
 .bg-1 {
-   background: url("../images/bg/banner-1.jpg") no-repeat 50% 50%;
+   background: url("../images/banner-1.jpg") no-repeat 50% 50%;
    background-size: cover;
 }
 
