--- a/source/partials/blocks/itinerario.htm
+++ b/source/partials/blocks/itinerario.htm
@@ -41,11 +41,29 @@
           </div>
           <div class="timeline-item">
             <div class="timeline-marker is-icon text-color">
+              <i class="fa-solid fa-moon"></i>
+            </div>
+            <div class="timeline-content">              
+              <p class="heading">Sabado 4 de Febrero - 5:03pm</p>
+              <h5>Salida de la Luna</h5>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-marker is-icon text-color">
               <i class="fa-solid fa-sun"></i>
             </div>
             <div class="timeline-content">
-              <p class="heading">Sabado 4 de Febrero - 5:45pm</p>
+              <p class="heading">Sabado 4 de Febrero - 5:42pm</p>
               <h5>Puesta del sol</h5>
+            </div>
+          </div>          
+          <div class="timeline-item">
+            <div class="timeline-marker is-icon text-color">
+              <i class="fa-solid fa-sun"></i>
+            </div>
+            <div class="timeline-content">              
+              <p class="heading">Domingo 5 de Febrero - 5:58am</p>
+              <h5>Salida del sol</h5>
             </div>
           </div>
           <div class="timeline-item">
@@ -53,23 +71,14 @@
               <i class="fa-solid fa-moon"></i>
             </div>
             <div class="timeline-content">              
-              <p class="heading">Domingo 5 de Febrero - 5:55am</p>
+              <p class="heading">Domingo 5 de Febrero - 6:00am</p>
               <h5>Puesta de la Luna</h5>
-            </div>
-          </div>
-          <div class="timeline-item">
-            <div class="timeline-marker is-icon text-color">
-              <i class="fa-solid fa-sun"></i>
-            </div>
-            <div class="timeline-content">              
-              <p class="heading">Domingo 5 de Febrero - 6:05am</p>
-              <h5>Salida del sol</h5>
             </div>
           </div>
           <div class="timeline-item">
             <div class="timeline-marker"></div>
             <div class="timeline-content">
-              <p class="heading">Domingo 5 de Febrero - 6:35am</p>
+              <p class="heading">Domingo 5 de Febrero - 6:30am</p>
               <h5>Desayuno post-boda</h5>
               <p>Nos despedimos desayunando.</p>
             </div>
